Changelog for Shake

0.4
    Add shakeFlush to control how often flush is called
    Fix a serious space leak in the thread pool
    #502, add shakeAssume to assume files are clean/dirty
    Remove validStored, replace with storedValue
    Remove the default validStored class, almost never right
    Remove Eq/Ord from ShakeOptions (now contains a func)
    #501, add statistics gathering functions to help report progress
    Ensure registering witnesses is thread safe
    Ensure GHC does not over-optimise type registration
0.3.10
    Add Paths.hs so you can run the tests from the tarball
0.3.9
    Don't rely on toList returning a consistent order
    Allow hashable-1.2
0.3.8
    Fix up FilePattern so "foo//bar" ?== "foo/bar"
0.3.7
    Update the cabal file
0.3.6
    Add addOracles, for implementing more advanced oracles
    Add withoutActions, for implementing command line arguments
0.3.5
    #571, vastly improve the correctness of FilePattern
    #574, documentation typos
    Expose rulePriority
0.3.4
    Update documentation with links to ICFP 2012 paper/talk
0.3.3
    Minor refactorings
0.3.2
    Fix cabal specification on non-Windows
0.3.1
    Don't use syntax also stolen by QuasiQuotes
    Avoid warnings about unused monadic values
    Fix up getModificationTime for GHC 7.6
    Don't assume catch is exported by Prelude (GHC 7.6 compat)
    Improve the error message when failing to build with *>> or ?>>
    Introduce a portable flag, to switch to portable FileTime ops
    Improve the error message when failing to build a file
    Ensure errors raised bubble up quickly
    Significant improvements to the profile output
    Only trace the program name by default, not the entire command
    Allow unordered-containers < 0.2 again
    Intern all keys, so they are only stored once
    Optimise modification time checking on Unix
    Optimise modification time checking on Windows
    Make some fields smaller on disk
    IMPORTANT: Incompatible on disk format change